ADD_EXECUTABLE(pdfid pdfid.cpp)

TARGET_LINK_LIBRARIES(pdfid ${PODOFO_LIB})
SET_TARGET_PROPERTIES(pdfid PROPERTIES COMPILE_FLAGS "${PODOFO_CFLAGS}")
ADD_DEPENDENCIES(pdfid ${PODOFO_DEPEND_TARGET})
INCLUDE_DIRECTORIES(${PoDoFo_SOURCE_DIR})
INSTALL(TARGETS pdfid
	COMPONENT pdfid
	RUNTIME DESTINATION "bin")
